added new properties for upload fields

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -144,6 +144,8 @@ _UI_SettingsContainer_generateScribitePlugins_feature = Scribite Plugins generie
 _UI_SettingsContainer_generateScribitePlugins_description = Ob Unterstützung für mehrere Scribite-Editoren generiert werden soll oder nicht. Benötigt externen Controller mit Finder-Komponente.
 _UI_SettingsContainer_generateTagSupport_feature = Tag Support generieren
 _UI_SettingsContainer_generateTagSupport_description = Ob der Tag Support generiert werden soll oder nicht. Benötigt User oder Admin Controller mit einer Display-Aktion.
+_UI_SettingsContainer_generateMultiHookNeedles_feature = MultiHook-Needles generieren
+_UI_SettingsContainer_generateMultiHookNeedles_description = Ob MultiHook-Needles generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateRssTemplates_feature = RSS-Templates generieren
 _UI_SettingsContainer_generateRssTemplates_description = Ob RSS View Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateAtomTemplates_feature = Atom-Templates generieren
@@ -380,6 +382,32 @@ _UI_UploadField_subFolderName_feature = Name Unterverzeichnis
 _UI_UploadField_subFolderName_description = Name des Unterverzeichnisses zur Speicherung dieser Dateien. Falls leer gelassen, wird der Name des Feldes benutzt.
 _UI_UploadField_allowedFileSize_feature = Erlaubte Dateigröße
 _UI_UploadField_allowedFileSize_description = Die maximal erlaubte Dateigröße in Bytes (0 = kein Limit).
+_UI_UploadField_maxSize_feature = Maximale Größe
+_UI_UploadField_maxSize_description = Maximale Dateigröße (leer = kein Limit). Beispiele: 4096 (bytes), 200k (kilobytes), 2M (megabytes).
+_UI_UploadField_mimeTypes_feature = Mime Typen
+_UI_UploadField_mimeTypes_description = Liste erlaubter Mime Typen. Beispiel: application/pdf, application/x-pdf
+_UI_UploadField_multiple_feature = Mehrfach
+_UI_UploadField_multiple_description = Ob dieses Feld mehrere Dateien erlaubt oder nicht.
+_UI_UploadField_minWidth_feature = Minimiale Breite
+_UI_UploadField_minWidth_description = Minimale Bildbreite in Pixeln (0 = kein Limit).
+_UI_UploadField_maxWidth_feature = Maximale Breite
+_UI_UploadField_maxWidth_description = Maximale Bildbreite in Pixeln (0 = kein Limit).
+_UI_UploadField_minHeight_feature = Minimale Höhe
+_UI_UploadField_minHeight_description = Minimale Bildhöhe in Pixeln (0 = kein Limit).
+_UI_UploadField_maxHeight_feature = Maximale Höhe
+_UI_UploadField_maxHeight_description = Maximale Bildhöhe in Pixeln (0 = kein Limit).
+_UI_UploadField_minRatio_feature = Minimales Verhältnis
+_UI_UploadField_minRatio_description = Minimales Seitenverhältnis (Breite / Höhe) (0 = kein Limit).
+_UI_UploadField_maxRatio_feature = Maximales Verhältnis
+_UI_UploadField_maxRatio_description = Maximales Seitenverhältnis (Breite / Höhe) (0 = kein Limit).
+_UI_UploadField_allowSquare_feature = Erlaube Quadrat
+_UI_UploadField_allowSquare_description = Ob Bilder im Quadrat erlaubt sind oder nicht.
+_UI_UploadField_allowLandscape_feature = Erlaube Querformat
+_UI_UploadField_allowLandscape_description = Ob Bilder im Querformat erlaubt sind oder nicht.
+_UI_UploadField_allowPortrait_feature = Erlaube Hochformat
+_UI_UploadField_allowPortrait_description = Ob Bilder im Hochformat erlaubt sind oder nicht.
+_UI_UploadField_detectCorrupted_feature = Erkenne korrupte
+_UI_UploadField_detectCorrupted_description = Ob Bildinhalte validiert werden oder nicht.
 _UI_ListField_length_feature = Länge
 _UI_ListField_length_description = Die Länge dieses Feldes.
 _UI_ListField_min_feature = Min
@@ -665,6 +693,7 @@ _UI_PositioningPropertyCategory = Positionierung
 _UI_RelationsPropertyCategory = Beziehungen
 _UI_SizePropertyCategory = Größe
 _UI_WorkflowPropertyCategory = Workflow
+_UI_ImageoptionsPropertyCategory = Bild-Optionen
 
 _UI_EAttribute_type = EAttribute
 _UI_EAnnotation_type = EAnnotation
