--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -160,6 +160,11 @@ MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann
 MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen, Farben und UUIDs müssen auch den nospace-Validator aktivieren.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
+MostDslValidator.EntityFieldUploadFileMaxSizeDeprecated=Die Eigenschaft allowedFileSize ist veraltet und wird in einer späteren Version entfernt. Bitte verwende statt dessen maxSize.
+MostDslValidator.EntityFieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
+MostDslValidator.EntityFieldUploadInvalidImageWidth=Die minimale Bildbreite darf nicht größer als die maximale Bildbreite sein.
+MostDslValidator.EntityFieldUploadInvalidImageHeight=Die minimale Bildhöhe darf nicht größer als die maximale Bildhöhe sein.
+MostDslValidator.EntityFieldUploadInvalidImageRatio=Das minimale Seitenverhältnis darf nicht größer als das maximale Seitenverhältnis sein.
 MostDslValidator.EntityFieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
 MostDslValidator.EntityFieldUploadNeedsValidFileExtensions=Das Attribut allowedExtensions muss eine kommaseparierte Liste der während dem Upload zu erlaubenden Dateitypen enthalten (Beispiel: gif, jpeg, jpg, png). Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
 MostDslValidator.EntityFieldUploadNeedsValidFileMaxSize=Das Attribut allowedFileSize darf keinen Wert niedriger als 0 haben.
