--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -116,6 +116,9 @@ MostDslQuickfixProvider.AddVendor=Anbieter hinzufügen
 MostDslQuickfixProvider.AddVersion=Version hinzufügen
 MostDslQuickfixProvider.AddViewAction=View-Aktion hinzufügen
 MostDslQuickfixProvider.AddZipcodeField=PLZ-Feld hinzufügen
+MostDslQuickfixProvider.AllowSquare=Erlaube Quadrat
+MostDslQuickfixProvider.AllowLandscape=Erlaube Querformat
+MostDslQuickfixProvider.AllowPortrait=Erlaube Hochformat
 MostDslQuickfixProvider.Capitalise=Groß schreiben
 MostDslQuickfixProvider.ChangeApplicationNameTo=Namen der Anwendung in '{0}' verändern
 MostDslQuickfixProvider.ChangeApplicationVendorTo=Anbieter der Anwendung in '{0}' verändern
@@ -204,6 +207,8 @@ MostDslQuickfixProvider.LowerMinValue=Min Wert herabsetzen
 MostDslQuickfixProvider.LowerMinVersion=Min Version herabsetzen
 MostDslQuickfixProvider.LowerScale=Scale herabsetzen
 MostDslQuickfixProvider.MakeRelationsUnidirectional=Relationen unidirektional machen
+MostDslQuickfixProvider.MigrateToNewProperty=Zu neuer Eigenschaft migrieren
+MostDslQuickfixProvider.MoveValueToNewProperty=Wert in neue Eigenschaft verschieben
 MostDslQuickfixProvider.NameOfImportedApplication=NameDerImportiertenAnwendung
 MostDslQuickfixProvider.RaiseLength=Länge hochsetzen
 MostDslQuickfixProvider.RaiseMaxValue=Max Wert hochsetzen
