--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -28,8 +28,9 @@ MostDslValidator.ApplicationNeedsController=Die Anwendung muss mindestens einen 
 MostDslValidator.ApplicationNeedsEmailAddress=Die Anwendung muss eine E-Mail-Adresse haben.
 MostDslValidator.ApplicationNeedsEntity=Die Anwendung muss mindestens eine Entität enthalten.
 MostDslValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
+MostDslValidator.ApplicationNeedsOnlyOwnVarForViewAction=Es ist empfohlen, eine Bool-Variable namens showOnlyOwnEntries zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
+MostDslValidator.ApplicationNeedsPageSizeVarForViewAction=Es ist empfohlen, eine Integer-Variable namens pageSize zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
 MostDslValidator.ApplicationNeedsPrefix=Die Anwendung muss ein Präfix für seine Datenbank-Tabellen haben.
-MostDslValidator.ApplicationNeedsVarsForViewAction=Es ist empfohlen, zwei Integer-Variablen namens pageSize und showOnlyOwnEntries zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
 MostDslValidator.ApplicationNeedsVendor=Die Anwendung muss einen Anbieter haben.
 MostDslValidator.ApplicationNeedsVersion=Die Anwendung muss eine Version haben.
 MostDslValidator.ApplicationPrefixIsInvalidIdentifier=Das Präfix muss ein gültiger Bezeichner in Kleinbuchstaben sein (z. B. keine Leerzeichen oder Sonderzeichen).
