--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -388,7 +388,7 @@ _UI_UploadField_mimeTypes_feature = Mime Typen
 _UI_UploadField_mimeTypes_description = Liste erlaubter Mime Typen. Beispiel: application/pdf, application/x-pdf
 _UI_UploadField_multiple_feature = Mehrfach
 _UI_UploadField_multiple_description = Ob dieses Feld mehrere Dateien erlaubt oder nicht.
-_UI_UploadField_minWidth_feature = Minimiale Breite
+_UI_UploadField_minWidth_feature = Minimale Breite
 _UI_UploadField_minWidth_description = Minimale Bildbreite in Pixeln (0 = kein Limit).
 _UI_UploadField_maxWidth_feature = Maximale Breite
 _UI_UploadField_maxWidth_description = Maximale Bildbreite in Pixeln (0 = kein Limit).
