added new target core version to distinguish last stable 1.4.x from last unstable 1.4.x

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -578,6 +578,7 @@ _UI_Unknown_feature = Unspezifiziert
 
 _UI_CoreVersion_ZK20_literal = ZK20
 _UI_CoreVersion_ZK14_literal = ZK14
+_UI_CoreVersion_ZK14DEV_literal = ZK14DEV
 _UI_CoreVersion_ZKPRE14_literal = ZKPRE14
 _UI_CoreVersion_ZK136_literal = ZK136
 _UI_CoreVersion_ZK135_literal = ZK135
