Provided help search engines for zikula.org and zikula.de

--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -91,6 +91,10 @@ help.searchengine.websearch.label=Web-Suche
 help.searchengine.websearch.desc=Führt eine allgemeine Web-Suche durch
 help.embedded_browser=Eingebetteter Browser
 help.system_browser=Standard System Browser
+help.search.zikula.org.label=Zikula.org
+help.search.zikula.org.desc=Die englische Zikula Supportseite durchsuchen
+help.search.zikula.de.label=Zikula.de
+help.search.zikula.de.desc=Die deutsche Zikula Supportseite durchsuchen
 
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
