added support for BIC constraint

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -146,6 +146,7 @@ MostDslValidator.EntityFieldsMustBeUnique=Die Namen der Felder müssen eindeutig 
 MostDslValidator.EntityFieldStringLengthMustNotBeGreaterMinLength=Die Größe des Strings muss größer sein als die minimale Länge.
 MostDslValidator.EntityFieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
 MostDslValidator.EntityFieldStringLengthMustNotBeZero=Die Größe des Strings darf nicht kleiner als 1 sein.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForBic=Die String-Länge für BIC-Nummern muss mindestens 12 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
@@ -157,8 +158,8 @@ MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLanguage=Die String-Län
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
-MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
-MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen, Farben und UUIDs müssen auch den nospace-Validator aktivieren.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von BIC, Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
+MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für BIC, Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen, Farben und UUIDs müssen auch den nospace-Validator aktivieren.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.EntityFieldUploadFileMaxSizeDeprecated=Die Eigenschaft allowedFileSize ist veraltet und wird in einer späteren Version entfernt. Bitte verwende statt dessen maxSize.
