--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -173,6 +173,7 @@ MostDslQuickfixProvider.EnableExternalControllerDesc=Generierung des externen Co
 MostDslQuickfixProvider.ExampleForAnotherModel=library/another.mostdsl
 MostDslQuickfixProvider.Extend=Erweitern
 MostDslQuickfixProvider.IncreaseFieldLength=Feldlänge erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo12=Feldlänge auf 12 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo15=Feldlänge auf 15 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo20=Feldlänge auf 20 erhöhen
@@ -222,6 +223,7 @@ MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheFirstO
 MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheLastOne=Alle ausgehenden Vererbungsbeziehungen außer der letzten entfernen
 MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheFirstOne=Alle Einstellungscontainer außer dem ersten entfernen
 MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheLastOne=Alle Einstellungscontainer außer den letzten entfernen
+MostDslQuickfixProvider.RemoveBicFlag=Das bic-Flag entfernen
 MostDslQuickfixProvider.RemoveColourFlag=Das colour-Flag entfernen
 MostDslQuickfixProvider.RemoveCountryFlag=Das country-Flag entfernen
 MostDslQuickfixProvider.RemoveCreditCardFlag=Das creditCard-Flag entfernen
@@ -230,7 +232,7 @@ MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveEnhancedWorkflow=Den erweiterten Workflow entfernen
 MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
-MostDslQuickfixProvider.RemoveIbanFlag=iban-Flag entfernen
+MostDslQuickfixProvider.RemoveIbanFlag=Das iban-Flag entfernen
 MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
 MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
 MostDslQuickfixProvider.RemoveLocaleFlag=Das locale-Flag entfernen
@@ -308,6 +310,7 @@ MostDslQuickfixProvider.UnsetAllEndDatesExceptThisOne=Alle Enddatum-Flags außer 
 MostDslQuickfixProvider.UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sortable position-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetAllVersionFlagsExceptThisOne=Alle version-Flags außer diesem zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptBic=Alle Flags außer bic zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCountry=Alle Flags außer country zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCredictCard=Alle Flags außer creditCard zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCurrency=Alle Flags außer currency zurücksetzen
@@ -336,6 +339,7 @@ MostDslQuickfixProvider.UnsetTheSortablePositionFlag=Das sortable position-Flag 
 MostDslQuickfixProvider.UnsetTheStartDateFlag=Das Startdatum-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheUniqueFlag=Das unique-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheVersionFlag=Das version-Flag zurücksetzen
+MostDslQuickfixProvider.UseAsBic=Als BIC verwenden
 MostDslQuickfixProvider.UseAsColour=Als Farbe verwenden
 MostDslQuickfixProvider.UseAsCountry=Als Land verwenden
 MostDslQuickfixProvider.UseAsCreditCard=Als Kreditkarte verwenden
