allow to extend help searches to docs for Symfony, Doctrine and Twig

--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -95,6 +95,12 @@ help.search.zikula.org.label=Zikula.org
 help.search.zikula.org.desc=Die englische Zikula Supportseite durchsuchen
 help.search.zikula.de.label=Zikula.de
 help.search.zikula.de.desc=Die deutsche Zikula Supportseite durchsuchen
+help.search.docs.symfony.label=Symfony Doku
+help.search.docs.symfony.desc=Die Dokumentation von Symfony durchsuchen
+help.search.docs.doctrine.label=Doctrine Doku
+help.search.docs.doctrine.desc=Die Dokumentation von Doctrine durchsuchen
+help.search.docs.twig.label=Twig Doku
+help.search.docs.twig.desc=Die Dokumentation von Twig durchsuchen
 
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
