removed meta data support

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -199,6 +199,7 @@ MostDslValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag 
 MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityInheritanceRelationshipMustNotBeSelfRelation=Selbstbeziehungen sind nicht erlaubt für Vererbungsbeziehungen.
 MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Feld mit dem aktivierten Attribut version.
+MostDslValidator.EntityMetaDataIsDeprecated=Die Metadaten-Erweiterung ist veraltet. Falls benötigt, erstelle eine normale Entität statt dessen.
 MostDslValidator.EntityMetaDataMustNotContainReserved=Entitäten mit Meta-Daten haben ein zusätzliches Feld zur Referenzierung derselben
 MostDslValidator.EntityMetaDataMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityMetaDataMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
