--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -238,6 +238,7 @@ MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
 MostDslQuickfixProvider.RemoveLocaleFlag=Das locale-Flag entfernen
 MostDslQuickfixProvider.RemoveLoggableFlag=Das loggable-Flag entfernen
 MostDslQuickfixProvider.RemoveMandatoryFlag=Das mandatory-Flag entfernen
+MostDslQuickfixProvider.RemoveMetaDataFlag=Das metaData-Flag entfernen
 MostDslQuickfixProvider.RemoveNullableFlag=Das nullable-Flag entfernen
 MostDslQuickfixProvider.RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfernen
 MostDslQuickfixProvider.RemovePercentageFlag=Das percentage-Flag entfernen
