added validation constraint and quick fix for deprecated target versions

--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -209,6 +209,7 @@ MostDslQuickfixProvider.LowerMinVersion=Min Version herabsetzen
 MostDslQuickfixProvider.LowerScale=Scale herabsetzen
 MostDslQuickfixProvider.MakeRelationsUnidirectional=Relationen unidirektional machen
 MostDslQuickfixProvider.MigrateToNewProperty=Zu neuer Eigenschaft migrieren
+MostDslQuickfixProvider.MigrateVersion=Version migrieren
 MostDslQuickfixProvider.MoveValueToNewProperty=Wert in neue Eigenschaft verschieben
 MostDslQuickfixProvider.NameOfImportedApplication=NameDerImportiertenAnwendung
 MostDslQuickfixProvider.RaiseLength=Länge hochsetzen
