ask user before installing update; added preference to control whether updates are ignored or not

--- a/bundles/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
@@ -27,3 +27,5 @@ PreferencePage_OverrideExistingFiles=Bestehende Dateien überschreiben
 PreferencePage_OverrideExistingFilesDescription=Wenn aktiviert, bricht der Generator-Workflow nicht ab, falls Dateien im ausgewählten Ausgabeordner existieren. Mit Vorsicht verwenden!
 PreferencePage_UseStagingUpdates=Staging Updates verwenden
 PreferencePage_UseStagingUpdatesDescription=Wenn aktiviert, verwendet die automatische Aktualisierung auch instabile Releases.
+PreferencePage_IgnoreUpdates=Updates ignorieren.
+PreferencePage_IgnoreUpdatesDescription=Wenn aktiviert, wird die automatische Aktualisierung nicht ausgeführt.
