--- a/bundles/de.guite.modulestudio.update.nl1.de/src/de/guite/modulestudio/update/messages_de.properties
+++ b/bundles/de.guite.modulestudio.update.nl1.de/src/de/guite/modulestudio/update/messages_de.properties
@@ -5,7 +5,7 @@ UpdateService_InvalidRepository=Ungültiger Repository URL:
 UpdateService_NoAgentFound=Kein Provisioning Agent vorhanden. Die Anwendung ist nicht für Updates eingerichtet.
 UpdateService_NoUpdatesFound=Keine Updates gefunden.
 UpdateService_OnlyFromExport=Aktualisieren aus Eclipse funktioniert nicht.
-UpdateService_PerformingUpdate=ModuleStudio wird nun die aktualisierten Komponenten herunterladen und automatisch installieren und anschließend neu starten.
+UpdateService_PerformingUpdate=Soll das Update jetzt eingespielt werden? Falls ja, wird ModuleStudio die aktualisierten Komponenten herunterladen und automatisch installieren und anschließend neu starten.
 UpdateService_StartingUpdate=Automatisches Update wird gestartet.
 UpdateService_UpdateAvailable=Eine Aktualisierung ist verfügbar.
 UpdateService_UpdateStatus=Update Status:
