added new option to control field display on view and display pages as well as whether they may be used for sorting

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -250,6 +250,8 @@ _UI_Entity_actions_feature = Actions
 _UI_Entity_actions_description = Liste der in diesem Entity Controller enthaltenen Aktionen.
 _UI_EntityField_entity_feature = Entität
 _UI_EntityField_entity_description = Entität, die dieses Feld enthält.
+_UI_EntityField_displayType_feature = Anzeige-Typ
+_UI_EntityField_displayType_description = Die Anzeige-Einstellung für dieses Feld.
 _UI_DerivedField_dbName_feature = DB Name
 _UI_DerivedField_dbName_description = Name der durch dieses Feld repräsentierten Datenbankspalte - verwendet per Standard den Feldnamen.
 _UI_DerivedField_defaultValue_feature = Standardwert
@@ -667,6 +669,14 @@ _UI_CascadeType_PERSIST_REMOVE_DETACH_literal = PERSIST_REMOVE_DETACH
 _UI_CascadeType_PERSIST_MERGE_DETACH_literal = PERSIST_MERGE_DETACH
 _UI_CascadeType_REMOVE_MERGE_DETACH_literal = REMOVE_MERGE_DETACH
 _UI_CascadeType_ALL_literal = ALL
+_UI_EntityFieldDisplayType_NONE_literal = NONE
+_UI_EntityFieldDisplayType_SORTING_literal = SORTING
+_UI_EntityFieldDisplayType_VIEW_literal = VIEW
+_UI_EntityFieldDisplayType_VIEW_SORTING_literal = VIEW_SORTING
+_UI_EntityFieldDisplayType_DISPLAY_literal = DISPLAY
+_UI_EntityFieldDisplayType_DISPLAY_SORTING_literal = DISPLAY_SORTING
+_UI_EntityFieldDisplayType_ALL_literal = ALL
+_UI_EntityFieldDisplayType_VIEW_DISPLAY_literal = VIEW_DISPLAY
 _UI_RelationAutoCompletionUsage_NONE_literal = NONE
 _UI_RelationAutoCompletionUsage_ONLY_SOURCE_SIDE_literal = ONLY_SOURCE_SIDE
 _UI_RelationAutoCompletionUsage_ONLY_TARGET_SIDE_literal = ONLY_TARGET_SIDE
@@ -695,6 +705,7 @@ _UI_RelationsPropertyCategory = Beziehungen
 _UI_SizePropertyCategory = Größe
 _UI_WorkflowPropertyCategory = Workflow
 _UI_ImageoptionsPropertyCategory = Bild-Optionen
+_UI_DisplayPropertyCategory = Anzeige
 
 _UI_EAttribute_type = EAttribute
 _UI_EAnnotation_type = EAnnotation
