fixed diagram editor layer descriptions

--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -17,15 +17,15 @@ repEntitiesTableDoc=Tabelleneditor für Entitäten.
 #filterHideSpecificMessage=Zu versteckende Entitäten auswählen
 
 #layerEntities=Entitäten
-layerEntitiesDoc=Grundlegende Entitäten-Informationen.
+#layerEntitiesDoc=Grundlegende Entitäten-Informationen.
 #layerFields=Felder
-layerFieldsDoc=Spezifikation von Entitäten-Feldern.
+#layerFieldsDoc=Spezifikation von Entitäten-Feldern.
 #layerIndexes=Indexe
-layerIndexesDoc=Spezifikation von Entitäten-Indexen.
+#layerIndexesDoc=Spezifikation von Entitäten-Indexen.
 #layerController=Controller
-layerControllerDoc=Beschreibung von Controller-Aktionen.
+#layerControllerDoc=Beschreibung von Controller-Aktionen.
 #layerVars=Variablen
-layerVarsDoc=Definitionen von Modulvariablen.
+#layerVarsDoc=Definitionen von Modulvariablen.
 
 #actions=Aktionen
 #actionsUppercase=AKTIONEN
