fixed the deprecated error define

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -285,7 +285,7 @@ MostDslValidator.RelationshipJoinTargetAliasNameShouldBeLonger=Das Ziel-Alias de
 MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
 MostDslValidator.RelationshipNeedsSourceEntity=Jede Beziehung muss eine Quell-Entität haben.
 MostDslValidator.RelationshipNeedsTargetEntity=Jede Beziehung muss eine Ziel-Entität haben.
-MostDslValidator.SettingsContainerHasDeprecatedTargetWarning=Die Ziel Core Version ist veraltet und wird bald entfernt.
+MostDslValidator.SettingsContainerHasDeprecatedTargetError=Die Ziel Core Version ist veraltet. Bitte eine andere wählen.
 MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
 MostDslValidator.SettingsContainerScribiteWithoutFinder=Scribite Plugins benötigen externen Controller und Finder-Komponente.
 MostDslValidator.VarContainerNameMustBeUnique=Die Namen der Variablen-Container müssen eindeutig sein.
